--- a/config.yaml
+++ b/config.yaml
@@ -5,9 +5,9 @@ settings:
   SRE:
     url_base: https://srm-api.sterlingtradingtech.com/pts-risk
   ActivOnePlatform:
-    host: 127.0.0.1
+    host: aop-ch-NAT.activfinancial.com:9061
   ActivContentPlatform:
-    host: 192.168.1.36:9010
+    host: aop-ch-NAT.activfinancial.com:9061
     table: 602
     output_fields: 456;280;362;329
   General:
@@ -24,8 +24,8 @@ credentials:
     password: VelFalAP1!
     account: VCPS-655-675557-P
   ActivOnePlatform:
-    username: replay
-    password: replay
+    username: activ-na
+    password: t769x00sd
   ActivContentPlatform:
-    username: replay
-    password: replay
+    username: activ-na
+    password: t769x00sd
