--- a/.gitignore
+++ b/.gitignore
@@ -157,6 +157,7 @@ cython_debug/
 # input default for website
 inputs.json
 SnapshotViewer/
+Database/
 
 # PyCharm
 #  JetBrains specific template is maintained in a separate JetBrains.gitignore that can
